# zstd-codec

./: .gitignore  .gitmodules  CMakeLists.txt
lib/zstd-codec-core/: CMakeLists.txt
lib/zstd-codec-core/include/zstd_codec_core/: ZstdApi.h  ZstdDict.h  ZstdStream.h  types.h
lib/zstd-codec-core/src/: ZstdApi.cc  ZstdDict.cc  ZstdStream.cc  lib.cc
src/zstd-codec-dev/: CMakeLists.txt
src/zstd-codec-dev/src/: main.cc
src/zstd-codec-node/: CMakeLists.txt
src/zstd-codec-node/src/: lib.cc
src/zstd-codec-web/: CMakeLists.txt
src/zstd-codec-web/src/: lib.cc
